@@ -1,7 +1,8 @@
 procps-3.2.1 --> procps-3.2.2
 
+new packager (downstream maintainer) guidelines in README
 move striping from install command to CFLAGS
-now using gcc -fweb and -frename-registers options
+new gcc options in use: -fweb, -frename-registers, etc.
 avoid warning about -lncurses when not linking -- thanks FLWM
 tolerate IA-64 headers without PAGE_SIZE
 ps: k option, same as --sort
